<resources>
    <string name="app_name">breathe</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Create Account</string>
    <string name="hint_name">Name</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="treatment_plan">Treatment Plan</string>
    <string name="health_risk_assesment">Health Risk Assesment</string>
    <string name="alerts">Alerts</string>
    <string name="tracking">Tracking</string>

    <string name="profile_text">Profile</string>
    <string name="share_message">Breathe, one stop place for Asthma treatment.</string>
    <string name="share_subject">Welcome to Breathe</string>
    <string name="share_text">Share</string>
    <string name="signout_text">Sign out</string>
    <string name="about_text">About</string>

    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>

    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>

    <string name="health_risk_page_title">Asthma Health Risk Assesment</string>
    <string name="health_risk_average_score">Average (6.1 of 10)</string>
    <string name="questionnaires">Questionnaires</string>
    <string name="questionnaire_not_completed">Not Completed</string>
    <string name="questionnaire_completed">Completed</string>


    <string-array name="tracking_spiner_array">
        <item>Peak Flow</item>
        <item>FEV1</item>
        <item>O2 saturation</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
