<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_treatment_plan"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/treatment_plan" />
        <item
            android:id="@+id/nav_health_risk_assesment"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/health_risk_assesment" />
        <item
            android:id="@+id/nav_alerts"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/alerts" />
        <item
            android:id="@+id/nav_tracking"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/tracking" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share_text" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_drawer_about"
                android:title="@string/about_text" />
        </menu>
    </item>

</menu>
